--- a/index.html
+++ b/index.html
@@ -7,28 +7,35 @@
     <meta name="author" content="Reagan">
     <meta name="description" content="My new cool project">
     <meta name="keywords" content="HTML, CSS, SEO, web, web development">
-    <title>Assignment-3-Contacts</title>
+    <title>Final project-Typing game</title>
     <link rel="shortcut icon" href="./assets/img/question-icon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/style/index.css">
+    <link rel="stylesheet" href="./assets/style/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit">
-    <script src="./assets/js/index.js" defer></script>
+    <script src="./assets/js/game.js" defer></script>
     <script src="https://kit.fontawesome.com/aa299d89ff.js" crossorigin="anonymous"></script>
-
 </head>
-
 <body>
-
-    <div class="container">
-        <img src="./assets/img/82501d3b-e89d-43a2-8b07-09751494467d.png" alt="">
-        <textarea name="" id="commBox" cols="70" rows="12" placeholder="Please, enter the comments here."></textarea>
-        <input type="submit" name="" id="" value="comments" class="combtn" />
+  <div class="container">
+    <div class="heading">Simple Speed Typing</div>
+    <div class="header">
+      <div class="errors">
+        <div class="header_text">Errors</div>
+        <div class="curr_errors">0</div>
+      </div>
+      <div class="timer">
+        <div class="header_text">Time</div>
+        <div class="curr_time">99s</div>
+      </div>
+      <div class="accuracy">
+        <div class="header_text">% Accuracy</div>
+        <div class="curr_accuracy">100</div>
+      </div>
     </div>
-    <div class="comment">
-        <ul>
 
-        </ul>
-    </div>
-
+    <div class="quote">Click on the area below to start the game.</div>
+    <textarea class="input_area" placeholder="start typing here..." oninput="processCurrentText()"
+      onfocus="startGame()"></textarea>
+    <button class="restart_btn" onclick="resetValues()">Restart</button>
+  </div>
 </body>
-
 </html>
